# MaturitaInformatika2019

./: 3  README.md  basen.fag  basen.txt  fagoutput.fag  fibbonaci.py  hjalp.txt  kopia.txt  kvadrat.txt  kys.txt  menalookup.xlsx  poznamky.md  text.txt  text_neparne.txt  text_parne.txt  zaporne.txt  ziaci.txt
PalmaJunior/: pancieropainter.py  strojopis.py
PalmaJuniorKolo3/: dejepis.py  hra.py  kys.txt  veza.py
Teoria/: allpoznamkes.md  zbierka2019.doc
c/: .gitignore  CMakeLists.txt  faktorial.c  hviezdicky.c  hviezdickyciselka.c  nasobilka.c  slova.c  znamka_pat.c
cpp/: .gitignore  CMakeLists.txt  faktorial.cpp
js/tstest/: index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml
palma/: bambus.py
python/: faktorial.py  hviezdicky.py  if_opakovanie.py  nasobenie_matrix.py  opakovaniesuma.py  priatelia.py  prvocislo.py  rocne_obdobia.py  rovnica.py  rozklad_na_prvocinitele.py  sortvisual.py  stromcek.py  uloha_odmocnina.py
python/engineer/: NSD.py  async_stuff.py  dalsie_funkcie.py  determinant.py  fn_integral.py  fn_obsah.py
python/gui/: animacia.py  editor.py  grafika_start.py  mys_klavesnica.py  nahodne_stvorce.py  pyglet_test.py  refresh.py  (+6 more)
ulohy/: convert.py  u01.py  u03.py  u04.py  u11.py  u12.py  u14.py  u16.py  u22.py  u23.py  u25.py  ulohyall.py
ulohyPL/: Ulohy.txt  tempCodeRunnerFile.py  u01.py  u02.py  u03.py  u04.py  u05.py  u06.py  u07.py  u08.py  u09.py  u10.py  u11.py  u12.py  u13.py  u14.py  u15.py  u16.py  u17.py  u18.py  u19.py  u20.py  u21.py  u22.py  u23.py  u24.py  u25.py  u26.py  u27.py  u28.py  u29.py  u30.py
(+43 files in other folders)
